Fix Edge overflow-x scrollbar

--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@
 }
 
 html {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    overflow-x: hidden;
 }
 
 body {
